--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./src:/var/www/html
+      - src_volume:/var/www/html
+      - certbot-etc:/etc/letsencrypt
+      - certbot-www:/var/www/certbot
     environment:
       - DB_HOST=db
       - DB_PORT=3306
@@ -14,6 +16,7 @@ services:
       - DB_PASSWORD=avidawesomepassword
     depends_on:
       - db
+      - certbot
 
   db:
     image: mysql:5.7
@@ -25,5 +28,36 @@ services:
       - ./db_init:/docker-entrypoint-initdb.d
     command: --default-authentication-plugin=mysql_native_password
 
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-www:/var/www/certbot
+      - ./certbot/scripts:/scripts
+    entrypoint: ["/scripts/init-letsencrypt.sh"]
+
 volumes:
+  src_volume:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/src
   db_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/db_data
+  certbot-etc:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/certbot/conf
+  certbot-www:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/certbot/www
