adjust containers more

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - DB_USERNAME=avid
       - DB_PASSWORD=avidawesomepassword
     depends_on:
-      - db
+      - mysql
       - certbot
 
   mysql:
