--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   apache:
     build: .
@@ -9,7 +11,7 @@ services:
       - certbot-etc:/etc/letsencrypt
       - certbot-www:/var/www/certbot
     environment:
-      - DB_HOST=db
+      - DB_HOST=mysql
       - DB_PORT=3306
       - DB_DATABASE=avid
       - DB_USERNAME=avid
@@ -34,7 +36,7 @@ services:
       - certbot-etc:/etc/letsencrypt
       - certbot-www:/var/www/certbot
       - ./certbot/scripts:/scripts
-    entrypoint: ["/scripts/init-letsencrypt.sh"]
+    entrypoint: ["/bin/bash", "/scripts/init-letsencrypt.sh"]
 
 volumes:
   src_volume:
