--- a/config/000-default-ssl.conf
+++ b/config/000-default-ssl.conf
@@ -1,3 +1,27 @@
+<VirtualHost *:80>
+    ServerAdmin jbaggio@rsttechnology.com
+    DocumentRoot /var/www/html
+
+    <Directory /var/www/html>
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
+    </Directory>
+
+    # Alias for Let's Encrypt challenge
+    Alias /.well-known/acme-challenge /var/www/certbot/.well-known/acme-challenge
+    <Directory /var/www/certbot/.well-known/acme-challenge>
+        AllowOverride None
+        Options +MultiViews +Indexes
+        Require all granted
+    </Directory>
+
+    # Redirect HTTP to HTTPS
+    RewriteEngine on
+    RewriteCond %{SERVER_NAME} =standarddms.mytruecloud.com
+    RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+</VirtualHost>
+
 <VirtualHost *:443>
     ServerAdmin jbaggio@rsttechnology.com
     DocumentRoot /var/www/html
@@ -18,8 +42,11 @@
         Require all granted
     </Directory>
 
-    # Redirect HTTP to HTTPS
-    RewriteEngine on
-    RewriteCond %{SERVER_NAME} =standarddms.mytruecloud.com
-    RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+    # Alias for Let's Encrypt challenge
+    Alias /.well-known/acme-challenge /var/www/certbot/.well-known/acme-challenge
+    <Directory /var/www/certbot/.well-known/acme-challenge>
+        AllowOverride None
+        Options +MultiViews +Indexes
+        Require all granted
+    </Directory>
 </VirtualHost>
