--- a/config/000-default.conf
+++ b/config/000-default.conf
@@ -1,16 +1,6 @@
-<VirtualHost *:443>
+<VirtualHost *:80>
     ServerAdmin jbaggio@rsttechnology.com
     DocumentRoot /var/www/html
-
-    # SSL configuration
-    SSLEngine on
-    SSLCertificateFile /etc/letsencrypt/live/standarddms.mytruecloud.com/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/live/standarddms.mytruecloud.com/privkey.pem
-    SSLCertificateChainFile /etc/letsencrypt/live/standarddms.mytruecloud.com/chain.pem
-
-    # Log files
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     <Directory /var/www/html>
         Options Indexes FollowSymLinks
@@ -25,4 +15,9 @@
         Options +MultiViews +Indexes
         Require all granted
     </Directory>
+
+    # Redirect HTTP to HTTPS
+    RewriteEngine on
+    RewriteCond %{SERVER_NAME} =standarddms.mytruecloud.com
+    RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
