--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,13 @@ services:
       - ./db_init:/docker-entrypoint-initdb.d
     command: --default-authentication-plugin=mysql_native_password
 
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-www:/var/www/certbot
+      - ./certbot/scripts:/scripts
+    entrypoint: ["/bin/sh", "/scripts/init-letsencrypt.sh"]
 
 volumes:
   src_volume:
