--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - DB_PASSWORD=avidawesomepassword
     depends_on:
       - mysql
+      - certbot
 
   mysql:
     image: mysql:5.7
