--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,27 +1,29 @@
-user  nginx;
-worker_processes  auto;
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+server {
+    listen 80;
+    server_name standarddms.mytruecloud.com;
 
-events {
-    worker_connections 1024;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+server {
+    listen 443 ssl;
+    server_name standarddms.mytruecloud.com;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    ssl_certificate /etc/letsencrypt/live/standarddms.mytruecloud.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/standarddms.mytruecloud.com/privkey.pem;
 
-    access_log  /var/log/nginx/access.log  main;
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+    }
 
-    sendfile        on;
-    tcp_nopush      on;
-    tcp_nodelay     on;
-    keepalive_timeout  65;
-    types_hash_max_size 2048;
-
-    include /etc/nginx/conf.d/*.conf;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 }
