--- a/config/default.conf
+++ b/config/default.conf
@@ -2,25 +2,28 @@ server {
     listen 80;
     server_name standarddms.mytruecloud.com;
 
-    root /var/www/html;
-    index index.php;
-
-    location / {
-        try_files $uri $uri/ =404;
-    }
-
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass php:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
         return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name standarddms.mytruecloud.com;
+
+    ssl_certificate /etc/letsencrypt/live/standarddms.mytruecloud.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/standarddms.mytruecloud.com/privkey.pem;
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 }
