--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,29 +1,29 @@
-server {
-    listen 80;
-    server_name standarddms.mytruecloud.com;
+user  nginx;
+worker_processes  auto;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+events {
+    worker_connections  1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name standarddms.mytruecloud.com;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    ssl_certificate /etc/letsencrypt/live/standarddms.mytruecloud.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/standarddms.mytruecloud.com/privkey.pem;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-    }
+    access_log  /var/log/nginx/access.log  main;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
 }
