--- a/config/default.conf
+++ b/config/default.conf
@@ -10,3 +10,20 @@ server {
         return 301 https://$host$request_uri;
     }
 }
+
+server {
+    listen 443 ssl;
+    server_name standarddms.mytruecloud.com;
+
+    ssl_certificate /etc/letsencrypt/live/standarddms.mytruecloud.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/standarddms.mytruecloud.com/privkey.pem;
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
