--- a/config/default.conf
+++ b/config/default.conf
@@ -2,6 +2,20 @@ server {
     listen 80;
     server_name standarddms.mytruecloud.com;
 
+    root /var/www/html;
+    index index.php;
+
+    location / {
+        try_files $uri $uri/ =404;
+    }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
@@ -15,12 +29,21 @@ server {
     listen 443 ssl;
     server_name standarddms.mytruecloud.com;
 
+    root /var/www/html;
+    index index.php index.html index.htm;
+
     ssl_certificate /etc/letsencrypt/live/standarddms.mytruecloud.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/standarddms.mytruecloud.com/privkey.pem;
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
+        try_files $uri $uri/ =404;
+    }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location /.well-known/acme-challenge/ {
