--- a/config/default.conf
+++ b/config/default.conf
@@ -16,10 +16,12 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
+    # Let's Encrypt webroot
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
+    # Redirect to HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
@@ -30,7 +32,7 @@ server {
     server_name standarddms.mytruecloud.com;
 
     root /var/www/html;
-    index index.php index.html index.htm;
+    index index.php;
 
     ssl_certificate /etc/letsencrypt/live/standarddms.mytruecloud.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/standarddms.mytruecloud.com/privkey.pem;
