--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,11 +1,10 @@
 user  nginx;
 worker_processes  auto;
-
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
@@ -19,11 +18,10 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
-
+    tcp_nopush      on;
+    tcp_nodelay     on;
     keepalive_timeout  65;
-
-    #gzip  on;
+    types_hash_max_size 2048;
 
     include /etc/nginx/conf.d/*.conf;
 }
