--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "443:443"
     volumes:
       - src_volume:/var/www/html
+      - file_store:/var/www/file_store
       - certbot-etc:/etc/letsencrypt
       - certbot-www:/var/www/certbot
       - ./config/nginx.conf:/etc/nginx/nginx.conf
@@ -53,6 +54,12 @@ volumes:
       type: none
       o: bind
       device: ${PWD}/src
+  file_store:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/files
   db_data:
     driver: local
     driver_opts:
