--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - src_volume:/var/www/html
       - certbot-etc:/etc/letsencrypt
       - certbot-www:/var/www/certbot
       - ./config/nginx.conf:/etc/nginx/nginx.conf
