Upload max size

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name standarddms.mytruecloud.com;
+    client_max_body_size 0;
 
     location / {
         return 301 https://$host$request_uri;
@@ -16,6 +17,7 @@ server {
 server {
     listen 443 ssl;
     server_name standarddms.mytruecloud.com;
+    client_max_body_size 0;
 
     root /var/www/html;
     index index.php;
@@ -23,6 +25,7 @@ server {
     ssl_certificate /etc/letsencrypt/live/standarddms.mytruecloud.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/standarddms.mytruecloud.com/privkey.pem;
 
+    client_ma
     location / {
         try_files $uri $uri/ =404;
     }
