--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - src_volume:/var/www/html
       - file_store:/var/www/file_store
     environment:
-      PHP_UPLOAD_MAX_FILESIZE: "0"
-      PHP_POST_MAX_SIZE: "0"
+      PHP_UPLOAD_MAX_FILESIZE: "1G"
+      PHP_POST_MAX_SIZE: "1G"
       PHP_MEMORY_LIMIT: "256M"
       PHP_MAX_EXECUTION_TIME: "300"
     expose:
