--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ${PWD}/files
+      device: /mnt/volume_files_1
   db_data:
     driver: local
     driver_opts:
