Update domain name

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name standarddms.mytruecloud.com;
+    server_name directdms.mytruecloud.com;
     client_max_body_size 0;
 
     location / {
@@ -16,14 +16,14 @@ server {
 
 server {
     listen 443 ssl;
-    server_name standarddms.mytruecloud.com;
+    server_name directdms.mytruecloud.com;
     client_max_body_size 0;
 
     root /var/www/html;
     index index.php;
 
-    ssl_certificate /etc/letsencrypt/live/standarddms.mytruecloud.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/standarddms.mytruecloud.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/directdms.mytruecloud.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/directdms.mytruecloud.com/privkey.pem;
 
     location / {
         try_files $uri $uri/ =404;
