--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - certbot-etc:/etc/letsencrypt
       - certbot-www:/var/www/certbot
       - ./certbot/scripts:/scripts
-    entrypoint: ["/bin/sh", "/scripts/init-letsencrypt.sh"]
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --quiet; sleep 12h & wait $!; done;'"
 
 volumes:
   src_volume:
