--- a/config/default.conf
+++ b/config/default.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
     server_name vault.e-lockbox.com;
-    client_max_body_size 0;
 
+    # Redirect all traffic to HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
@@ -13,30 +13,33 @@ server {
     }
 }
 
-
 server {
     listen 443 ssl;
     server_name vault.e-lockbox.com;
-    client_max_body_size 0;
 
-    root /var/www/html;
-    index index.php;
-
+    # SSL certificates
     ssl_certificate /etc/letsencrypt/live/vault.e-lockbox.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/vault.e-lockbox.com/privkey.pem;
 
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Website root
+    root /var/www/html;
+    index index.php index.html;
+
+    # Handle general requests
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # PHP files handling
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
-        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        fastcgi_index index.php;
     }
 }
