--- a/config/default.conf
+++ b/config/default.conf
@@ -17,6 +17,8 @@ server {
     listen 443 ssl;
     server_name docuworks.avidian.com;
 
+    client_max_body_size 1024M;
+
     # SSL certificates
     ssl_certificate /etc/letsencrypt/live/docuworks.avidian.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/docuworks.avidian.com/privkey.pem;
